test: use Files.writeString() for config creation